force-app/main/default/objects/Profile_List__c/Profile_List__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Profiles and their ids that are used for certain processes. For example, to exclude profiles for firing on the ZipCheckOwner trigger.</description>
    <label>Profile List</label>
</CustomObject>