force-app/main/default/objects/Profile_List__c/fields/DSM__c.field-meta.xml
<CustomField>
    <fullName>DSM__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a DSM/FSM profile?</inlineHelpText>
    <label>DSM/FSM?</label>
    <type>Checkbox</type>
</CustomField>