force-app/main/default/objects/Profile_List__c/fields/IsFieldSales__c.field-meta.xml
<CustomField>
    <fullName>IsFieldSales__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a Field Sales profile?</inlineHelpText>
    <label>Is Field Sales?</label>
    <type>Checkbox</type>
</CustomField>