force-app/main/default/objects/Profile_List__c/fields/Manage_Zip_Edit_Access__c.field-meta.xml
<CustomField>
    <fullName>Manage_Zip_Edit_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will override the sales org custom setting for read only on manage zip assignments if this box is checked</description>
    <inlineHelpText>Will override the sales org custom setting for read only on manage zip assignments if this box is checked</inlineHelpText>
    <label>Manage Zip Edit Access</label>
    <type>Checkbox</type>
</CustomField>