force-app/main/default/objects/Profile_List__c/fields/OppTeamMember_Roles__c.field-meta.xml
<CustomField>
    <fullName>OppTeamMember_Roles__c</fullName>
    <description>This value is used by the OpptyTeam aura component bundle. It is used to allow specific roles to be added to the opportunity team member depending on their profile.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Allows specific roles to be added as an opportunity team member depending on their profile using the Manager Opp Team button.</inlineHelpText>
    <label>OppTeamMember Roles</label>
    <length>100</length>
    <type>Text</type>
</CustomField>