force-app/main/default/objects/Profile_List__c/fields/Sales2Support__c.field-meta.xml
<CustomField>
    <fullName>Sales2Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this profile create a sales2support case from the Sales Case button? If yes, check the box</description>
    <inlineHelpText>check if the profile should be able to create a Sales2Support case from the Sales Case button.</inlineHelpText>
    <label>Sales2Support</label>
    <type>Checkbox</type>
</CustomField>