force-app/main/default/objects/Profile_List__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The primary Sales Org for this profile</inlineHelpText>
    <label>Sales Org</label>
    <length>20</length>
    <type>Text</type>
</CustomField>