force-app/main/default/objects/Profile_List__c/listViews/Owned_By_Default.listView-meta.xml
<ListView>
    <fullName>Owned_By_Default</fullName>
    <columns>NAME</columns>
    <columns>Profile_Name__c</columns>
    <columns>ProfileId__c</columns>
    <columns>DSA__c</columns>
    <columns>DSM__c</columns>
    <columns>IsFieldSales__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>SalesRep__c</columns>
    <columns>ZSA__c</columns>
    <columns>ZSM__c</columns>
    <columns>ZipCheckOwnerExclude__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OwnedByDefault__c</field>
        <operation>equals</operation>
        <value>True</value>
    </filters>
    <label>Owned By Default</label>
</ListView>