force-app/main/default/objects/Profile_List__c/listViews/Profiles_with_OppTeamMember_Roles.listView-meta.xml
<ListView>
    <fullName>Profiles_with_OppTeamMember_Roles</fullName>
    <columns>NAME</columns>
    <columns>Profile_Name__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>OppTeamMember_Roles__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OppTeamMember_Roles__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Profiles with OppTeamMember Roles</label>
</ListView>